# NYU-ds-ga-1008FinalProject

./: .gitignore  .gitmodules  README.md  dino.ipynb  example.ipynb  mae_test.ipynb  pyproject.toml  requirements.txt
docs/: architecture.md  backbone_characterization.md  datasets.md  hpc_guide.md  training.md
examples/: mae_test.ipynb
experiments/: dino-res34.ipynb  dino.ipynb  example.ipynb  hf224_config.json  hf_config.json  lejepa.ipynb  lejepa_example.ipynb  lightning_example.ipynb  mae.ipynb  mae_test.ipynb  mae_test_2.ipynb  pretrain_example.ipynb  test_loader_all.ipynb  test_loader_all_data1.ipynb  test_loader_all_data2.ipynb  test_loader_all_data3.ipynb  test_loader_all_resnet_big.ipynb  testset1.ipynb  testset2.ipynb  wejepa.ipynb
experiments/configs/: domain_adaption_vit_b_16_cub200.json  finetune_convnext_small_cub200_224.json  finetune_devel_cub200_224.json  finetune_pretrained__no_bypass_vit_b_16_cub200_224.json  finetune_pretrained__no_bypass_vit_b_16_jepa_cub200_224.json  finetune_pretrained_vit_b_16_cub200_224.json  finetune_swin_s_cub200_224.json  finetune_vit_b_16_bypass_cub200_224.json  finetune_vit_b_16_bypass_jepa_cub200_224.json  finetune_vit_b_16_cub200_224.json  hf224_swin_t_random.json  pretrain_convnext_small.json  pretrain_convnext_small_tsbpp_224.json  pretrain_convnext_tiny.json  pretrain_convnext_tiny_tsbpp_224.json  pretrain_devel_tsbpp_224.json  pretrain_swin_s.json  pretrain_swin_s_tsbpp_224.json  (+7 more)
hpc/: README.md  pipeline-py-client
tests/: download_from_arrow.py  test_analysis.py  test_backbones.py  test_wejepa.py
(+33 files in other folders)
