[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "wejepa"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Long Quang", email = "longquang@nyu.edu"},
  {name = "Alejandro Sanchez", email = "aas10269@nyu.edu"},
  {name = "Amogh Gulati", email = "ag11542@nyu.edu"},
]
dependencies = [
  "numpy>=1.23",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "torch>=2.1",
  "torchvision",
  "torchtext",
  "tqdm",
  "opencv-python",
  "seaborn",
  "pandas",
  "typeguard",
  "pyyaml",
  "ipympl",
  "librosa",
  "einops>=0.7",
  "datasets>=2.16",
  "huggingface_hub",
  "timm",
  "wandb",
  "hydra-core",
  "omegaconf",
  "transformers",
  "lightly",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
  "mypy>=1.8",
  "networkx",
]
docs = [
  "sphinx>=7.2",
  "myst-nb>=1.1",
  "sphinx-book-theme>=1.1",
  "nbsphinx>=0.9",
  "ipykernel>=6.29",
  "ipywidgets",
  "jupyter",
  "jupyterlab",
  "jupytext>=1.15"
]

[tool.hatch.build.targets.wheel]
packages = ["src/wejepa"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
select = ["E", "F", "I", "UP", "B"]
line-length = 88

[tool.mypy]
python_version = "3.9"
strict = true
packages = ["wejepa"]
